--- a/css/layout.css
+++ b/css/layout.css
@@ -1,15 +1,41 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 :root {
     --grid-gap: 20px;
 }
 
-.container {
-	height: 100vh;
-	width: 100vw;
+.container{
+	height: calc(100vh - (var(--grid-gap) * 2));
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: 100px auto 150px;
 	grid-gap: var(--grid-gap);
 	margin: var(--grid-gap);
-	background-color: pink;
+}
 
+.header, .footer {
+	grid-column: 1/-1;
+	grid-gap: var(--grid-gap);
+	border-top: 
+}
+
+.main__content{
+	display: grid;
+	grid-template-rows: repeat(2, 1fr);	
+	grid-gap: var(--grid-gap);
+}
+
+.main__right__sidebar{
+	display: grid;
+	grid-template-rows: repeat(3, 1fr);	
+	grid-gap: var(--grid-gap);	
+}
+
+.main__left__sidebar{
+	display: grid;
+	grid-template-rows: repeat(4, 1fr);	
+	grid-gap: var(--grid-gap);		
 }
