--- a/css/layout.css
+++ b/css/layout.css
@@ -19,13 +19,13 @@
 .header, .footer {
 	grid-column: 1/-1;
 	grid-gap: var(--grid-gap);
-	border-top: 
 }
 
 .main__content{
 	display: grid;
 	grid-template-rows: repeat(2, 1fr);	
 	grid-gap: var(--grid-gap);
+
 }
 
 .main__right__sidebar{
@@ -36,6 +36,14 @@
 
 .main__left__sidebar{
 	display: grid;
-	grid-template-rows: repeat(4, 1fr);	
+	grid-template-rows: repeat(2, 1fr);	
 	grid-gap: var(--grid-gap);		
+}
+
+.left_item1 {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-content: flex-end;
+	background-color: red;
 }
