--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,13 @@
     border-bottom: solid;
     border-color: black;
     border-width: 5px;
+    font-size: 50px;
 }
 .main__content__item--1,
 .main__content__item--2 {
     background-color: peru;
     color: #011;
+    border-radius: 7px;
 }
 .main__sidebar__item--1,
 .main__sidebar__item--2,
