--- a/css/layout.css
+++ b/css/layout.css
@@ -10,7 +10,7 @@
 
 .container{
 	display: grid;
-	grid-template-columns: 1fr 3fr;
+	grid-template-columns: auto 3fr;
 	grid-template-rows: repeat(5, auto);
 	grid-gap: var(--grid-gap);
 	margin: var(--grid-gap);
