--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
     font-size: 50px;
 }
 
-#name {
+.name {
     font-size: 40px;
 }
 
@@ -48,9 +48,10 @@
 }
 
 #picture {
-    height: 80%;
-    width: 100%;
+    height: 300px;
+    width: 190px;
     border-radius: 5px;
+    flex-basis: 250px;
 }
 
 .dot {
