--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,6 +10,7 @@
 }
 
 .footer {
+    display: flex;
     color: lightgray;
     background-color: black;
     border-color: black;
@@ -116,6 +117,7 @@
     font-size: 16px;
     border: none;
     align-self: center;
+    cursor: pointer;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -157,4 +159,71 @@
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
     color: darkgray;
+}
+
+.about-me {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(1.1);
+    color: lightgray;
+    cursor: pointer;
+}
+
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: black;
+    padding: 1rem 1.5rem;
+    width: auto;
+    border-radius: 0.5rem;
+}
+
+.close-button {
+    float: right;
+    width: 1.5rem;
+    line-height: 1.5rem;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    color: darkgray;
+    background-color: lightgray;
+}
+.close-button:hover {
+    background-color: darkgray;
+    color: lightgray;
+}
+
+.show-modal {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+
+.image-slider{
+    overflow: hidden;
+}
+#image_slider{
+    display: flex;
+    justify-content: space-around;
+    position: relative;
+    height: 280px;
+    padding:0;
+}
+#image_slider li{
+    float:left;
+    list-style: none;
+}
+
+.slider-image {
+    height: 10rem;
+    width: 10rem;
 }
