--- a/src/css/style.css
+++ b/src/css/style.css
@@ -208,24 +208,63 @@
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
 
-.image-slider{
+.carousel {
     display: flex;
-    justify-content: space-around;
-    overflow: hidden;
-}
-#image_slider{
-    display: flex;
-    justify-content: space-around;
-    position: relative;
-    height: 280px;
-    padding:0;
-}
-#image_slider li{
-    float:left;
-    list-style: none;
+    justify-content: center;
 }
 
-.slider1-image, .slider2-image, .slider3-image {
-    height: 10rem;
+.image-carousel {
+    display: flex;
+    grid-column: 1/-1;
+    justify-content: center;
     width: 10rem;
+    height: 10rem;
+    overflow: hidden;
+    position: relative;
+}
+
+.inner {
+        display: flex;
+        position: absolute;
+        left: 0;
+        transition: left 0.25s ease-out;
+}
+
+.bubbles {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-bottom: 5px;
+}
+
+.next::after, .prev::after {
+    content: '>';
+    position: absolute;
+    top: 50%;
+    right: 0;
+    background-color: white;
+    font-size: 20px;
+    width: 1em;
+    height: 3em;
+    font-weight: bold;
+    font-family: sans-serif;
+    transform: translateY(-50%);
+    line-height: 3em;
+    box-sizing: border-box;
+    padding: 0 0.2em;
+    cursor: pointer;
+    opacity: 0.5;
+    transition: opacity 0.1s linear;
+}
+
+.next:hover::after, .prev:hover::after {
+    opacity: 1;
+}
+
+.prev::after {
+    content: '<';
+    left: 0;
 }
