--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,7 +50,7 @@
 #picture {
     /*border-radius: 50%;*/
     /*flex-basis: 250px;*/
-    box-shadow: 5px 5px;
+    box-shadow: #cacaca 5px 5px 5px;
 }
 
 .dot {
@@ -91,6 +91,7 @@
 
 #linkedIn {
     background-color: white;
+    font: 0;
 }
 
 #email {
@@ -109,7 +110,6 @@
     color: red;
 }
 
-/* Dropdown Button */
 .menu {
     background-color: black;
     color: lightgray;
@@ -120,7 +120,6 @@
     cursor: pointer;
 }
 
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: relative;
     color: lightgray;
@@ -128,7 +127,6 @@
     margin-right: 3rem;
 }
 
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
     display: none;
     position: absolute;
@@ -138,7 +136,6 @@
     z-index: 1;
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
@@ -146,17 +143,14 @@
     display: block;
 }
 
-/* Change color of dropdown links on hover */
 .dropdown-content a:hover {
     background-color: darkgray;
 }
 
-/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
     color: darkgray;
 }
@@ -186,6 +180,13 @@
     border-radius: 0.5rem;
 }
 
+.show-modal {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+
 .close-button {
     float: right;
     width: 1.5rem;
@@ -201,19 +202,13 @@
     color: lightgray;
 }
 
-.show-modal {
-    opacity: 1;
-    visibility: visible;
-    transform: scale(1.0);
-    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
-}
 
 .carousel {
     display: flex;
     justify-content: center;
 }
 
-figure {
+figure a {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -234,16 +229,6 @@ figure {
         position: absolute;
         left: 0;
         transition: left 0.25s ease-out;
-}
-
-.bubbles {
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin-bottom: 5px;
 }
 
 .next::after, .prev::after {
