Added links in description to github

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -113,6 +113,11 @@
     cursor: pointer;
 }
 
+.review {
+    color: lightgray;
+    background-color: #F0F8FF;
+}
+
 .modal-content {
     background-color: black;
     border-radius: 0.5rem;
