--- a/src/css/style.css
+++ b/src/css/style.css
@@ -160,7 +160,6 @@
 }
 
 .card {
-    background-color: black;
     color: lightgray;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -198,4 +197,9 @@
     background-color: black;
     color: lightgray;
     cursor: pointer;
+}
+
+.project-image {
+    height: 5rem;
+    /*width: 5rem;*/
 }
