--- a/src/css/style.css
+++ b/src/css/style.css
@@ -96,13 +96,15 @@
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    transition-duration: .35s;
 }
 
 .dropdown-content a:hover {
     background-color: darkgray;
+    transition-duration: .35s;
 }
 
-.dropdown:hover .dropbtn {
+.dropdown:hover, .dropdown:focus {
     color: darkgray;
 }
 
@@ -200,6 +202,10 @@
 }
 
 .project-image {
-    height: 5rem;
+    height: 6rem;
     /*width: 5rem;*/
 }
+
+/*.items:hover {
+    background-color: darkgray;
+}*/
