--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -4,268 +4,296 @@
     padding: 0;
 }
 
-:root {
-    --grid-gap: 20px;
+@media screen and (min-width: 551px) {
+    :root {
+        --grid-gap: 20px;
+    }
+
+    .container-home {
+    	display: grid;
+    	height: 100vh;
+    	grid-template-columns: repeat(10, 1fr);
+    	grid-template-rows: 70px auto 50px;
+    	grid-gap: var(--grid-gap);
+    }
+
+    .header {
+    	display: flex;
+    	grid-column: 1/-1;
+    	justify-content: space-between;
+    	height: auto;
+    }
+
+    .name {
+        font-size: 40px;
+        color: lightgray;
+    }
+
+    #about-me {
+    	grid-column: 1/6;
+    	display: flex;
+    	justify-content: center;
+    	align-items: center;
+    }
+
+    #picture {
+    	display: flex;
+    	justify-content: center;
+    	align-self: center;
+    	max-width: 26.991rem;
+    	max-height: 18rem;
+    }
+
+    #skills {
+    	grid-column: 6/-1;
+    	display: flex;
+    	justify-content: space-around;
+    	align-items: center;
+        flex-wrap: wrap;
+    }
+
+    .footer {
+    	grid-column: 1/-1;
+    	display: flex;
+    	align-items: center;
+    	justify-content: space-around;
+    }
+
+
+    .name {
+    	margin-left: 50px;
+    }
+
+    .links {
+    	display: flex;
+    }
+
+    .contact-info {
+    	display: flex;
+    	overflow-y: hidden;
+    	margin-left: 
+    }
+
+    .all-skills {
+    	height: 25rem;
+    	display: flex;
+    	align-items: center;
+    }
+
+    .bio {
+    	width: 30em;
+    	align-self: center;
+    }
+
+    .list-of-skills {
+    	display: flex;
+    	flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .items {
+    	text-indent: 1.5rem;
+    }
+
+    #linkedIn {
+    	margin-right: 1rem;
+    } 
+
+    .project-nav {
+    	display: flex;
+    	grid-column: 1/-1;
+    	justify-content: space-around;
+    }
+
+    .links i {
+    	margin-left: 35px;
+    	margin-right: 35px;
+    }
+
+    .projects {
+    	display: flex;
+    	flex-direction: column;
+    	grid-column: 1/-1;
+    	justify-content: space-between; 
+    }
+
+    .course-pictures {
+    	display: flex;
+    	justify-content: space-between;
+    }
+
+    .hospital-app {
+    	display: flex;
+    	flex-direction: column;
+    }
+
+    #github {
+    	margin-right: 1rem;
+    }
+
+    .trigger {
+    	margin-right: 50%;
+    	border: none;
+    }
+
+    .container-projects {
+    	display: grid;
+    	height: 100vh;
+    	grid-template-columns: repeat(10, 1fr);
+    	grid-template-rows: 70px auto 50px;
+    	grid-gap: var(--grid-gap);
+    }
+
+    .cards {
+        grid-column: 1/-1;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .project-image {
+    	max-height: 300px;
+        height: 10rem;
+    }
+
+    .container > header nav ul {
+        display: none;
+        left: -47px;
+        position: absolute;
+    }
+
+    .nav-bar {
+        align-items: flex-end;
+    }
+
+    #header-link {
+        margin-right: 20rem; 
+    }
+
+    .menu {
+        padding: 16px;
+        font-size: 16px;
+        align-self: center;
+        cursor: pointer;
+    }
+
+    .dropdown {
+        position: relative;
+        display: inline-block;
+        margin-right: 3rem;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        width: auto;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+
+    .dropdown-content a {
+        padding: 12px 16px;
+        display: block;
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+
+    .about-me {
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        visibility: hidden;
+        transform: scale(1.1);
+    }
+
+    .modal-content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 1rem 1.5rem;
+        width: auto;
+        border-radius: 0.5rem;
+    }
+
+    .show-modal {
+        visibility: visible;
+        transform: scale(1.0);
+        transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+    }
+
+    .close-button {
+        float: right;
+        width: 1.5rem;
+        line-height: 1.5rem;
+        text-align: center;
+    }
+
+    .image {
+        height: 10rem;
+        width: 10rem;
+    }
+
+    .card {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        width: 15rem;
+        flex-basis: 15rem;
+        max-height: 14rem;
+    }
+
+    .description {
+        padding: 16px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+
+    .project-dropdown {
+        position: relative;
+    }
+
+    .description-content {
+        display: none;
+        position: absolute;
+        width: auto;
+        z-index: 1;
+    }
+
+    .description-content a {
+        padding: 12px 16px;
+        display: block;
+    }
 }
 
-.container-home {
-	display: grid;
-	height: 100vh;
-	grid-template-columns: repeat(10, 1fr);
-	grid-template-rows: 70px auto 50px;
-	grid-gap: var(--grid-gap);
-}
+/*For smaller screens*/
+@media screen and (max-width: 550px) {
+    .container-home {
+        grid-template-columns: repeat(10, 1fr);
+        grid-template-rows: 70px repeat(2, auto) 50px;
+    }
+    .name {
+        font-size: 30px;
+        color: lightgray;
+    }
 
-.header {
-	display: flex;
-	grid-column: 1/-1;
-	justify-content: space-between;
-	height: auto;
-}
+    #picture {
+        grid-column: 1/-1;
+        width: 100vw;
+        height: 66.7%;
+        align-items: flex-start;
+    }
 
-#about-me {
-	grid-column: 1/6;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-#picture {
-	display: flex;
-	justify-content: center;
-	align-self: center;
-	max-width: 26.991rem;
-	max-height: 18rem;
-}
-
-#skills {
-	grid-column: 6/-1;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-}
-
-.footer {
-	grid-column: 1/-1;
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-}
-
-
-.name {
-	margin-left: 50px;
-}
-
-.links {
-	display: flex;
-}
-
-.contact-info {
-	display: flex;
-	overflow-y: hidden;
-	margin-left: 
-}
-
-.all-skills {
-	height: 25rem;
-	display: flex;
-	align-items: center;
-}
-
-.bio {
-	width: 30em;
-	align-self: center;
-}
-
-.list-of-skills {
-	display: flex;
-	flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.items {
-	text-indent: 1.5rem;
-}
-
-#linkedIn {
-	margin-right: 1rem;
-} 
-
-.project-nav {
-	display: flex;
-	grid-column: 1/-1;
-	justify-content: space-around;
-}
-
-.links i {
-	margin-left: 35px;
-	margin-right: 35px;
-}
-
-.projects {
-	display: flex;
-	flex-direction: column;
-	grid-column: 1/-1;
-	justify-content: space-between; 
-}
-
-.course-pictures {
-	display: flex;
-	justify-content: space-between;
-}
-
-.hospital-app {
-	display: flex;
-	flex-direction: column;
-}
-
-#github {
-	margin-right: 1rem;
-}
-
-.trigger {
-	margin-right: 50%;
-	border: none;
-}
-
-.container-projects {
-	display: grid;
-	height: 100vh;
-	grid-template-columns: repeat(10, 1fr);
-	grid-template-rows: 70px auto 50px;
-	grid-gap: var(--grid-gap);
-}
-
-.cards {
-    grid-column: 1/-1;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.project-image {
-	max-height: 300px;
-    height: 10rem;
-}
-
-.container > header nav ul {
-    display: none;
-    left: -47px;
-    position: absolute;
-}
-
-.nav-bar {
-    align-items: flex-end;
-}
-
-#skills {
-    align-self: center;
-}
-
-#header-link {
-    margin-right: 20rem; 
-}
-
-.menu {
-    padding: 16px;
-    font-size: 16px;
-    align-self: center;
-    cursor: pointer;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-    margin-right: 3rem;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    width: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    padding: 12px 16px;
-    display: block;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.about-me {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    visibility: hidden;
-    transform: scale(1.1);
-}
-
-.modal-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 1rem 1.5rem;
-    width: auto;
-    border-radius: 0.5rem;
-}
-
-.show-modal {
-    visibility: visible;
-    transform: scale(1.0);
-    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
-}
-
-.close-button {
-    float: right;
-    width: 1.5rem;
-    line-height: 1.5rem;
-    text-align: center;
-}
-
-.image {
-    height: 10rem;
-    width: 10rem;
-}
-
-.card {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    width: 15rem;
-    flex-basis: 15rem;
-    max-height: 14rem;
-}
-
-.description {
-    padding: 16px;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.project-dropdown {
-    position: relative;
-}
-
-.description-content {
-    display: none;
-    position: absolute;
-    width: auto;
-    z-index: 1;
-}
-
-.description-content a {
-    padding: 12px 16px;
-    display: block;
+    .footer {
+        height: 50px;
+        display: flex;
+    }
 }
